# tukosmo

./: .gitignore  BSDmakefile  Cargo.toml  GNUmakefile  LICENSE  Makefile  README.md  Tukosmo.toml  cert.pem  key.pem  package-lock.json  package.json  rollup.config.js  tsconfig.json
db/: extensions.sql  types.sql
db/checks/: c_csrf_token_by_token_session.sql  c_file_by_name.sql  c_file_by_title.sql  c_lang_by_code.sql  c_lang_by_id.sql  c_language_has_all_names.sql  c_post_by_id.sql  c_post_has_all_trans.sql  c_post_has_trans.sql  c_same_tshv_visitor.sql  c_same_tshvr_visitor.sql  c_session_by_id.sql  c_suspended_user_by_email.sql  c_tag_by_id.sql  c_tshs_date.sql  c_user_by_email.sql  c_user_name_by_user_lang.sql
db/deletes/: d_all_sessions.sql  d_file.sql  d_lang_code.sql  d_language.sql  d_language_name.sql  d_page.sql  d_page_id.sql  d_page_translation.sql  d_post.sql  d_post_id.sql  d_post_translation.sql  d_session.sql  d_session_by_ip_date.sql  d_session_by_user_agent_date.sql  d_sessions_of_user.sql  d_tag.sql  d_tag_translation.sql  d_tags_of_post.sql  d_user.sql  d_user_name_by_user_lang.sql
db/errors/: err_csrf_token_is_not_a_valid_uuid.sql  err_default_language_cant_be_deleted.sql  err_email_already_exists.sql  err_featured_image_is_not_image.sql  err_field_is_not_lang_code.sql  err_file_title_already_exists.sql  err_filename_already_exists.sql  err_lang_code_already_exists.sql  err_passwords_do_not_match.sql  err_some_wrong_i18n_user_name.sql  err_some_wrong_lang_id_of_name.sql  err_some_wrong_lang_name.sql  err_some_wrong_name_for_lang.sql  err_some_wrong_tag_name.sql  err_some_wrong_tag_permalink.sql  err_suspended_account.sql  err_unknown_error.sql  err_user_cant_delete_itself.sql  err_user_is_not_admin.sql  err_user_not_logged_in.sql  err_uuid_is_not_valid.sql  err_wrong_body_text.sql  err_wrong_copyright_owner.sql  err_wrong_csrf_token.sql  err_wrong_description.sql  err_wrong_domain.sql  err_wrong_email.sql  err_wrong_file_id.sql  err_wrong_file_title.sql  err_wrong_filename.sql  err_wrong_lang_code.sql  err_wrong_lang_id.sql  err_wrong_own_lang_name.sql  err_wrong_page_number.sql  err_wrong_password.sql  err_wrong_permalink.sql  err_wrong_post_id.sql  err_wrong_post_permalink.sql  err_wrong_rpp_number.sql  err_wrong_tag_id.sql  (+7 more)
db/extra/: e_ext_is_image.sql  e_is_body_text.sql  e_is_copyright_owner.sql  e_is_description.sql  e_is_domain.sql  e_is_email.sql  e_is_file_title.sql  e_is_filename.sql  e_is_lang_code.sql  e_is_lang_name.sql  e_is_permalink.sql  e_is_secure_password.sql  e_is_tag_name.sql  e_is_title.sql  e_is_user_name.sql  e_is_website_subtitle.sql  e_is_website_title.sql
db/inserts/: i_file.sql  i_lang_code.sql  i_language.sql  i_language_name.sql  i_page.sql  i_page_id.sql  i_page_translation.sql  i_post.sql  i_post_id.sql  i_post_translation.sql  i_reset_password_code_by_user_id.sql  i_session.sql  i_session_by_email.sql  i_stats_server.sql  i_stats_visit.sql  i_tag.sql  i_tag_of_post.sql  i_tag_translation.sql  i_user.sql  i_user_name.sql
db/scripts/: 01-init.sql  02-example-post.sql
db/selects/: 0s_language_code_by_id.sql  0s_name_of_language.sql  0s_untrans_post_title_by_id.sql  s_files.sql  (+66 more)
etc/: Tukosmo.toml  tukosmo-freebsd.sh  tukosmo.service
src/: main.rs
static/: bundle.admin.css  bundle.css
ui/: app.js
(+686 files in other folders)
