[package]
name = "tukosmo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5"
actix-files = "0.5.0"
actix-identity = "0.3.1"
rand = "0.8.4"
postgres = {version = "0.19.1", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-0_8"]}
postgres-types = {version = "0.2.1", features = ["derive"]}
chrono = "0.4.19"
uuid = "0.8"
bcrypt = "0.10"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
markup = "0.12.2"
css-minify = "0.2.2"
pulldown-cmark = { version = "0.8", default-features = false }
minify-html = { version = "0.6.8" }
#minify-html = { version = "0.6.8", features = ["js-esbuild"] }
