[package]
name = "tukosmo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3", features = ["openssl"]}
openssl = {version = "0.10", features = ["v110"]}
actix-cors = "0.5"
actix-files = "0.5.0"
actix-multipart = "0.3.0"
futures-util = "0.3.18"
sanitize-filename = "0.3.0"
actix-identity = "0.3.1"
actix-web-middleware-redirect-https = "3.0.1"
rand = "0.8.4"
postgres-types = {version = "0.2.1", features = ["derive"]}
chrono = "0.4.19"
uuid = { version = "0.8", features = ["serde", "v4"] }
bcrypt = "0.10"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
markup = "0.12.5"
css-minify = "0.2.2"
pulldown-cmark = {version = "0.8", default-features = false}
esbuild-rs = "0.13.8"
crossbeam = "0.8"
minify-html = {version = "0.6.8", features = ["js-esbuild"]}
image = "0.23.14"
ico = "0.1.0"
toml = "0.5.8"
futures = "0.3.19"
acme-micro = "0.12.0"
reqwest = {version = "0.11.9", features = ["blocking"]}

[dependencies.postgres]
version = "0.19.1"
features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-0_8"]
