[package]
name = "tukosmo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.0.1", features = ["openssl"]}
openssl = {version = "0.10.38", features = ["v110"]}
actix-cors = "0.6.0"
actix-files = "0.6.0"
actix-service = "2.0.2"
actix-multipart = "0.4.0"
futures-util = "0.3.21"
tokio = {version = "1.17.0", features = ["full"]}
sanitize-filename = "0.3.0"
actix-identity = "0.4.0"
actix-web-middleware-redirect-https = "3.0.1"
rand = "0.8.5"
postgres-types = {version = "0.2.2", features = ["derive"]}
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
bcrypt = "0.12.0"
jsonwebtoken = "8.0.1"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
markup = "0.12.5"
css-minify = "0.2.2"
esbuild-rs = "0.13.8"
crossbeam = "0.8.1"
minify-html = {version = "0.8.0", features = ["js-esbuild"]}
image = "0.24.1"
ico = "0.1.0"
toml = "0.5.8"
futures = "0.3.21"
acme-micro = "0.12.0"
reqwest = {version = "0.11.9", features = ["blocking"]}

[dependencies.tokio-postgres]
version = "0.7.5"
features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-0_8"]
